2-User authentification - Added user model with signup and login enpoints
