# src/api/v1/resources/user/user.model.js
@@ -1,0 +1,16 @@
+import mongoose from 'mongoose'
+
+const { Schema } = mongoose
+const userSchema = new Schema({
+    user: {
+        type: String,
+        required: true,
+        unique: true
+    },
+    password: {
+        type: String,
+        required: true
+    }
+})
+
+export default mongoose.model('User', userSchema)
