# src/api/v1/resources/user/user.router.js
@@ -1,5 +1,8 @@
 import express from 'express'
+import passport from 'passport'
 import userController from './user.controller'
 
 export const userRouter = express.Router()
-userRouter.route('/').post(userController.create)
+userRouter.post('/signup', userController.signup)
+userRouter.post('/login', userController.login)
+userRouter.get('/me', passport.authenticate('jwt', { session: false }), userController.authenticate)
